CR-2008-02-06-0: Enhancem.: o remove ts_dev_con impl. by sub connections
                            o check expired connections at end of each
                              test and in menu
                            o implemented timeout for wait_for_enter()
                            o logfile has now name of configuration file
                              plus ".ts.log" and will be created in the
                              same directory like the specified configuration
                              file (obtained from --file cli parameter)
                 Issue:     170
                 Review:    AA

MG-2008-02-07-0: Enhancem.: quotas added for string condition
                 Review:    CR

LP-2008-02-05-0: Enhancem.: Testsuite can hadle new 'remove old cluster' 
                            questions
                 Review:    MD

JO-2008-02-04-0: Enhancem.: updated arco_checktree junit_tests to compensate
                            for dbw being started automatically after install.

AA-2008-02-04-0: Enhancem.: SSL support changes for JMX server
                 Review:    RH

JG-2008-02-01-0: Enhancem.: No need to shutdown scheduler with 6.2 and higher.

LP-2008-02-01-0: Bugfix.:   Fix for dbwriter _exit_status message
                 Review:    JO

JO-2008-02-01-0: Enhamcem.: Synchronized install prompts with the install scripts

RH-2008-02-01-0: Bugfix:    Hedeby: install test assigns additional resources
                            explicitly to spare_pool
                 Review:    CR

RD-2008-01-31-0: Enhancem.: Added test for Issue 2476
                 Review:    AH

RD-2008-01-30-0: Bugfix:    fixed 1914 testsuite test
                 Review:    JG

CR-2008-01-30-0: Bugfix:    first compile clean on java build host as 
                            workaround for inconsistent ant dependencies
                 Review:    AA

AP-2008-01-30-0: Enhancem.: o Adding the global database configuration