@@ -1,3 +1,8 @@
+CR-2008-02-07-0: Enhancem.: o operate_add_cluster now also appends enabled
+                              testsuite_trash cli option when starting 
+                              remote ts calls
+                 Review:    AA
+
 CR-2008-02-06-0: Enhancem.: o remove ts_dev_con impl. by sub connections
                             o check expired connections at end of each
                               test and in menu
